Add assets from Electron demos + changelog + index

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>REDELEC 0.0.2</title>
+
+        <link rel="stylesheet" href="assets/css/variables.css">
+        <link rel="stylesheet" href="assets/css/nativize.css">
+        <link rel="stylesheet" href="assets/css/global.css">
+
+
     </head>
 
     <body>
         <h1>HELLO WORLD</h1>
-        <script>require('./index.js');</script>
     </body>
 </html>
