Beginning of React integration

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>REDELEC 0.0.2</title>
+        <title>REDELEC 0.1.1</title>
 
         <link rel="stylesheet" href="assets/css/variables.css">
         <link rel="stylesheet" href="assets/css/nativize.css">
@@ -12,6 +12,8 @@
     </head>
 
     <body>
-        <h1>HELLO WORLD</h1>
+        <div id="content"></div>
+
+
     </body>
 </html>
