Forgot to add components.js

--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>REDELEC 0.0.2</title>
+        <title>REDELEC 0.0.3</title>
 
         <link rel="stylesheet" href="assets/css/variables.css">
         <link rel="stylesheet" href="assets/css/nativize.css">
         <link rel="stylesheet" href="assets/css/global.css">
-
-
     </head>
 
     <body>
         <h1>HELLO WORLD</h1>
+
+        <h2>Below React first steps</h2>
+        <p><br/></p>
+        <div id="app"></div>
+        <script src="bundle.js"></script>
+
     </body>
 </html>
