--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <title>REDELEC 0.0.3</title>
 
-        <link rel="stylesheet" href="assets/css/variables.css">
-        <link rel="stylesheet" href="assets/css/nativize.css">
-        <link rel="stylesheet" href="assets/css/global.css">
+        <link rel="stylesheet" href="../assets/css/variables.css">
+        <link rel="stylesheet" href="../assets/css/nativize.css">
+        <link rel="stylesheet" href="../assets/css/global.css">
     </head>
 
     <body>
@@ -15,7 +15,7 @@
         <h2>Below React first steps</h2>
         <p><br/></p>
         <div id="app"></div>
-        <script src="bundle.js"></script>
+        <script src="dist.js"></script>
 
     </body>
 </html>
